--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <h3>Cel</h3>
           <p class="small muted">
-            Zebrać kilka narzędzi i write-upów, żeby pokazać je przyszłemu pracodawcy (SOC / pentest / bezpieczeństwo sieci / OT).
+            W trakcie...
           </p>
         </div>
       </div>
@@ -157,13 +157,12 @@
 
       <div class="card item">
         <p class="desc">
-          Interesuję się cyberbezpieczeństwem, sieciami i embedded. Buduję projekty praktyczne (narzędzia, analiza ruchu, automatyzacje)
-          oraz dokumentuję je na GitHubie i w formie wpisów.
+          Interesuję się cyberbezpieczeństwem, sieciami i embedded. Buduję projekty praktyczne (narzędzia, analiza ruchu, automatyzacje, projekty w oparciu o mikrokontrolery takie jak Raspberry Pi, ESP32)
+          oraz dokumentuję je na GitHubie i w formie wpisów
         </p>
         <div class="tags">
           <span class="tag">Linux</span>
           <span class="tag">TCP/IP</span>
-          <span class="tag">Wireshark</span>
           <span class="tag">Python (podstawy)</span>
           <span class="tag">Embedded</span>
           <span class="tag">OT/ICS</span>
