--- a/index.html
+++ b/index.html
@@ -77,20 +77,26 @@
         <span class="muted">Repozytoria + opis działania</span>
       </div>
 
-      <div class="grid">
-        <div class="card item">
-          <h3>Analizator sieci LAN (MVP)</h3>
-          <p class="meta">Status: w budowie • Python</p>
-          <p class="desc">
-            Narzędzie do wykrywania hostów w sieci, podstawowego skanowania portów oraz generowania raportu.
-          </p>
-          <div class="tags">
-            <span class="tag">Python</span>
-            <span class="tag">Nmap</span>
-            <span class="tag">TCP/IP</span>
-            <span class="tag">Raport HTML</span>
-          </div>
-        </div>
+<a class="project-link" href="drones_rpi.html">
+  <div class="card item">...</div>
+</a>
+  <div class="card item">
+    <h3>System sterowania dronem (Raspberry Pi)</h3>
+    <p class="meta">Status: opis projektu • Python</p>
+    <p class="desc">
+      Odbiór sygnałów RC (ELRS/CRSF) przez UART, dekodowanie kanałów,
+      sterowanie silnikami oraz odczyt czujników (BMP280/MPU9250) przez I²C.
+    </p>
+    <div class="tags">
+      <span class="tag">Raspberry Pi</span>
+      <span class="tag">Python</span>
+      <span class="tag">CRSF</span>
+      <span class="tag">UART</span>
+      <span class="tag">I²C</span>
+    </div>
+  </div>
+</a>
+
 
         <div class="card item">
           <h3>File Inspector (plan)</h3>
