--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <span class="muted">Repozytoria + opis działania</span>
       </div>
 
-<a class="project-link" href="drones_rpi.html">
+<a class="project-link" href="drone_rpi.html">
   <div class="card item">
     <h3>System sterowania dronem (Raspberry Pi)</h3>
     <p class="meta">Status: opis projektu • Python</p>
