--- a/index.html
+++ b/index.html
@@ -95,7 +95,20 @@
   </div>
 </a>
 
-
+      <div class="grid">
+        <div class="card item">
+          <h3>Analizator sieci LAN (MVP)</h3>
+          <p class="meta">Status: w budowie • Python</p>
+          <p class="desc">
+            Narzędzie do wykrywania hostów w sieci, podstawowego skanowania portów oraz generowania raportu.
+          </p>
+          <div class="tags">
+            <span class="tag">Python</span>
+            <span class="tag">Nmap</span>
+            <span class="tag">TCP/IP</span>
+            <span class="tag">Raport HTML</span>
+          </div>
+        </div>
         <div class="card item">
           <h3>File Inspector (plan)</h3>
           <p class="meta">Status: planowane • Analiza plików</p>
